eks_app/consumer3.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: consumer3-app
  labels:
    app: consumer3-app
spec:
  replicas: 2
  selector:
    matchLabels:
      app: consumer3-app
  template:
    metadata:
      labels:
        app: consumer3-app
    spec:
      containers:
      - name: consumer3-app
        image: 378810859022.dkr.ecr.us-west-2.amazonaws.com/consumer3-repo
---
apiVersion: v1
kind: Service
metadata:
  name: consumer3-app
spec:
  selector:
    app: consumer3-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
