eks_app/consumer3-route.yaml
apiVersion: gateway.networking.k8s.io/v1alpha2
kind: HTTPRoute
metadata:
  name: consumer3-app
spec:
  parentRefs:
  - name: consumer3-svc-network
    sectionName: http 
  rules:
  - backendRefs:  
    - name: consumer3-app
      kind: Service
      port: 8080
      weight: 10
